Fix Java 9 Deprecations
Fix use of methods deprecated in Java 9.